# rusty-crew

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  agents-project.md  package-lock.json  package.json  tsconfig.json
adr/: 0001-current-pi-package-source.md
crates/brains/: README.md
crates/brains/openai-responses/: Cargo.toml
crates/brains/openai-responses/src/: lib.rs  openai_oauth.rs
crates/bridge/core-bridge-api/: Cargo.toml  bridge-manifest.toml
crates/bridge/core-bridge-api/src/: brain_stream.rs  buffers.rs  lib.rs
crates/bridge/core-bridge-codegen/: Cargo.toml
crates/bridge/core-bridge-codegen/src/: main.rs
crates/bridge/core-bridge-mock/: Cargo.toml
crates/bridge/core-bridge-mock/src/: lib.rs
crates/bridge/core-bridge-node/: Cargo.toml
crates/bridge/core-bridge-node/src/: lib.rs
crates/core/core-body/: Cargo.toml
crates/core/core-body/src/: lib.rs
crates/core/core-bus/: Cargo.toml
crates/core/core-bus/src/: lib.rs
crates/core/core-config/: Cargo.toml
crates/core/core-engine/: Cargo.toml
crates/core/core-engine/src/: lib.rs  memory_spaces.rs
crates/core/core-persistence/: Cargo.toml
crates/core/core-persistence/src/: lib.rs  module_schema.rs  postgres_proof.rs  repositories.rs
crates/core/core-protocol/: Cargo.toml
crates/core/core-session/: Cargo.toml
crates/core/core-tool-registry/: Cargo.toml
docs/: 2824-architecture-decision-index.md  2825-stub-fake-audit.md  README.md  adapter-diagnostics-multi-agent-projection.md  admin-http-host-auth-api-boundary.md  agent-activity-observation-producer.md  architecture-remediation-clean-break-policy.md  architecture-remediation-plan.md  architecture-review-2026-07-01.md  background-governance-observation-projection.md  background-memory-skill-review-triggers.md  background-service-diagnostics-admin-controls.md  background-services-governance-loop-architecture.md  brain-wake-stream-protocol.md  bridge-contract-validation.md  bridge-surface-growth-review-2026-07-02.md  browser-session-lifecycle-and-scoping.md  capture-producer-prompt-schema.md  channel-ingress-rust-events-and-wakes.md  channel-mcp-binding-persistence.md  cleanup-reconciliation-loop-plan.md  context-compaction-artifacts.md  curator-admin-control-routes.md  curator-candidate-discovery-reporting.md  curator-execute-boundary.md  curator-mutation-executor-safeguards.md  curator-review-e2e-proof.md  curator-state-snapshots-mutation-boundaries.md  debug-api-client.md  debug-tui-state-renderer.md  delegated-resource-cleanup-loop.md  delegation-request-contract.md  den-assignment-completion-evidence-loop-plan.md  den-assignment-evidence-e2e-proof.md  den-channels-anti-corruption-adapter.md  den-channels-multi-agent-e2e-proof.md  den-channels-presence-membership-subscriptions.md  den-channels-transport-cursor-discipline.md  den-completion-evidence-projection.md  den-memories-client.md  (+107 more)
docs/adr/: 0002-napi-brain-event-throughput.md  0003-mid-turn-delta-policy.md  0004-wake-scheduler-ownership.md  0005-bridge-surface-and-diagnostics.md  0006-prime-agent-delegation-runtime.md  0007-worker-pools-as-optional-capacity.md  0008-delegated-session-lifecycle-guardrails.md  0009-bounded-fan-out-delegation.md  0010-delegation-den-observability-and-controls.md  0011-steer-followup-frozen-snapshot.md  0012-single-engine-service-scope.md  0013-wake-buffer-assembly-ownership.md  0014-tool-profile-enforcement.md  0015-test-seams-and-public-exports.md  0016-runtime-clock-policy.md  0017-module-schema-registry-and-migration-ownership.md  0018-typed-memory-space-api-and-governance.md  0019-db-backed-profile-registry-and-file-assets.md  0020-storage-backend-abstraction-and-postgresql-readiness.md  0021-first-class-brain-modules.md  0022-crew-owned-service-storage.md
fixtures/runtime-config-parity/: README.md
fixtures/runtime-config-parity/invalid/: service.json
fixtures/runtime-config-parity/valid/: create-profile-request.camel.json  create-profile-request.snake.json  service.json  validation-input.camel.json  validation-input.snake.json
fixtures/tool-registry/: default-tool-registry-metadata.json
governance/: ownership.toml  storage-scope.toml
ops/systemd/: rusty-crew.service  service.env.example
tools/: check-rust-crate-boundaries.mjs
ts/smokes/: operator-surfaces-e2e.ts
(+7 files in other folders)
