[package]
name = "rusty-crew-core-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rusty-crew-core-body = { path = "../core-body" }
rusty-crew-core-bus = { path = "../core-bus" }
rusty-crew-core-protocol = { path = "../core-protocol" }
rusty-crew-core-session = { path = "../core-session" }
