[package]
name = "rusty-crew-core-persistence"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
postgres = ["dep:postgres"]
postgres-proof = ["postgres"]

[dependencies]
postgres = { workspace = true, optional = true }
rusqlite.workspace = true
rusty-crew-core-protocol = { path = "../core-protocol" }
serde.workspace = true
serde_json.workspace = true
